--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@
 
 # Site settings
 # title appears in the header
-title: workshop-template-b
+title: go-go gh-pages!
 # title-icon appears in the header to give some pizazz (leave blank for none)
 # choose from Font Awesome 5 free, https://fontawesome.com/icons?d=gallery&m=free
 # some options: fas fa-wrench; fas fa-cogs; fas fa-code; fas fa-chalkboard-teacher; fas fa-book-open
 title-icon: fas fa-code
 # description, keywords, and image for meta tags
-description: "Create a workshop website quick and easy!"
-keywords: "workshops, websites, gh-pages, jekyll"
+description: "Learn about GitHub pages and Jekyll."
+keywords: "github, github-pages, websites, static gen, hosting, html, workshop, gh-pages"
 featured-image: "/images/uidaho-workshop.jpg"
 
 # author settings for cc-by, appears in the footer and credits
@@ -24,7 +24,7 @@ pub_year: 2020
 github_username: evanwill
 
 # add the full url for the github repository
-repo: "https://github.com/evanwill/workshop-template-b"
+repo: "https://github.com/evanwill/go-go-ghpages-b"
 
 # site urls
 # add the url for the domain,
@@ -32,7 +32,7 @@ repo: "https://github.com/evanwill/workshop-template-b"
 url: https://evanwill.github.io
 # add subsection of the domain,
 # on gh-pages this is a / followed by the name of the repository
-baseurl: /workshop-template-b
+baseurl: /go-go-ghpages-b
 
 # add search box to footer?
 search: true
@@ -40,7 +40,7 @@ search: true
 # add google analytics if desired (optional)
 # if blank, it will be ignored
 # use JEKYLL_ENV=production on build command
-google_analytics: 
+google_analytics: UA-74844011-1
 
 # defaults (to simplify front matter)
 defaults:
