add section layout

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,6 @@ defaults:
   - scope:
       path: "content"
     values:
-      layout: "default"
+      layout: "section"
 # Build settings
 markdown: kramdown
