--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ search: true
 # add google analytics if desired (optional)
 # if blank, it will be ignored
 # use JEKYLL_ENV=production on build command
-google-analytics-id: UA-74844011-1
+google-analytics-id: G-7N13F1ZJNR
 
 # defaults (to simplify front matter)
 defaults:
